test_suite/tests/ui/remote/wrong_ser.stderr
error[E0308]: mismatched types
 --> $DIR/wrong_ser.rs:9:10
  |
9 | #[derive(Serialize)]
  |          ^^^^^^^^^ expected `u8`, found `u16`
  |
  = note: expected reference `&u8`
             found reference `&u16`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
